add validation general info settings, add TextArea custom component

--- a/client/src/shared/ui/Input/Input.module.scss
+++ b/client/src/shared/ui/Input/Input.module.scss
@@ -9,6 +9,14 @@
   gap: 9px;
   font-weight: 400;
 
+  &.full {
+    width: 100%;
+
+    .styledInput {
+      min-width: 100%;
+    }
+  }
+
   .styledInput {
     outline: none;
     min-width: 279px;
