--- a/client/src/widgets/Header/ui/Header.module.scss
+++ b/client/src/widgets/Header/ui/Header.module.scss
@@ -19,7 +19,7 @@
       align-items: center;
       gap: 48px;
 
-      span {
+      .notificationsIcon {
         display: inline-flex;
         align-items: center;
       }
