--- a/client/src/shared/ui/Input/Input.module.scss
+++ b/client/src/shared/ui/Input/Input.module.scss
@@ -23,7 +23,7 @@
     height: 36px;
     padding: 0 10px;
     border: 1px solid var(--dark-color-100);
-    color: var(--light-color-900);
+    color: var(--light-color-100);
     background: transparent;
     border-radius: 2px;
     font-size: 16px;
@@ -37,11 +37,10 @@
     }
 
     &:hover {
-      color: var(--light-color-900);
+      border: 1px solid var(--light-color-900);
     }
 
     &:focus {
-      color: var(--light-color-900);
       border-radius: 2px;
       border: 1px solid var(--accent-color-700);
     }
