--- a/client/src/features/auth/signup/ui/signup.module.scss
+++ b/client/src/features/auth/signup/ui/signup.module.scss
@@ -1,3 +1,10 @@
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-top: 11px;
+}
+
 .info {
   margin-bottom: 7px;
 }
@@ -45,3 +52,5 @@
   gap: 60px;
   padding: 13px;
 }
+
+
