--- a/client/src/shared/ui/TextArea/TextArea.module.scss
+++ b/client/src/shared/ui/TextArea/TextArea.module.scss
@@ -15,7 +15,7 @@
     padding: 0 10px;
     border: 1px solid var(--dark-color-100);
     color: var(--light-color-100);
-    background: transparent;
+    background: var(--dark-color-500);
     border-radius: 2px;
     font-size: 16px;
     font-family: Inter, sans-serif;
