--- a/client/src/shared/ui/Tabs/Tabs.module.scss
+++ b/client/src/shared/ui/Tabs/Tabs.module.scss
@@ -4,6 +4,7 @@
   .Tab {
     position: relative;
     flex-grow: 1;
+    min-width: max-content;
     text-align: center;
     padding: 8px 16px;
     font-size: 16px;
@@ -39,14 +40,15 @@
         opacity: 0.15;
       }
     }
-  }
 
-  .underline {
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background: var(--dark-color-100);
-    bottom: 0;
+    .underline {
+      position: absolute;
+      left: 0;
+      right: 0;
+      height: 2px;
+      background: var(--dark-color-100);
+      bottom: 0;
+    }
   }
 
   .activeUnderline {
