--- a/client/src/widgets/CitySelect/CitySelect.module.scss
+++ b/client/src/widgets/CitySelect/CitySelect.module.scss
@@ -5,7 +5,6 @@
   font-family: Inter, sans-serif;
   line-height: 24px;
   background-color: var(--dark-color-700);
-  margin-top: 15px;
 
   &.max {
     width: 100%;
@@ -18,8 +17,8 @@
     width: inherit;
     border-left: 1px solid var(--dark-color-100);
     border-right: 1px solid var(--dark-color-100);
-    border-bottom: 1px solid var(--dark-color-100);
     background-color: var(--dark-color-700);
+    z-index: 100;
 
     .cityItem {
       width: inherit;
@@ -27,9 +26,7 @@
       cursor: pointer;
       transition: all .2s linear;
       
-      &:not(:last-child) {
-        border-bottom: 1px solid var(--dark-color-100);
-      }
+      border-bottom: 1px solid var(--dark-color-100);
 
       &:hover {
         background-color: var(--dark-color-100);
