--- a/client/src/features/auth/signup/ui/signup.module.scss
+++ b/client/src/features/auth/signup/ui/signup.module.scss
@@ -45,3 +45,11 @@
   gap: 60px;
   padding: 13px;
 }
+
+.agreeBlock {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  //background-color: #0a6638;
+}
