--- a/client/src/shared/styles/variables/common/_b-titles.scss
+++ b/client/src/shared/styles/variables/common/_b-titles.scss
@@ -19,6 +19,10 @@
         font-size: 10px;
         line-height: 15px;
     }
+    &.bt12 {
+        font-size: 12px;
+        line-height: 17px;
+    }
     &.bt14 {
         font-size: 14px;
         line-height: 20px;
