--- a/client/src/shared/styles/variables/global.scss
+++ b/client/src/shared/styles/variables/global.scss
@@ -34,7 +34,7 @@
   --light-color-300: #f7fbff;
   --light-color-500: #edf3fa;
   --light-color-700: #d5dae0;
-  --light-color-900: #8d9094;
+  --light-color-900: #bdc1c7;
 
   --primary-text-color: var(--light-color-100);
   --secondary-text-color: var(--dark-color-100);
