--- a/client/src/shared/ui/Modal/Modal.module.scss
+++ b/client/src/shared/ui/Modal/Modal.module.scss
@@ -39,6 +39,7 @@
 }
 
 .header {
+  width: -webkit-fill-available;
   padding: 12px 24px;
   display: flex;
   align-items: center;
@@ -61,6 +62,7 @@
 }
 
 .body {
+  width: -webkit-fill-available;;
   padding: 24px;
 
   @media (max-width: 769px) {
