--- a/client/src/shared/ui/Stack/Flex/Flex.module.scss
+++ b/client/src/shared/ui/Stack/Flex/Flex.module.scss
@@ -18,6 +18,10 @@
   justify-content: space-between;
 }
 
+.justifyStretch {
+  justify-content: stretch;
+}
+
 .alignStart {
   align-items: flex-start;
 }
@@ -50,6 +54,10 @@
   gap: 8px;
 }
 
+.gap12 {
+  gap: 12px;
+}
+
 .gap16 {
   gap: 16px;
 }
@@ -62,7 +70,16 @@
   gap: 36px;
 }
 
+.gap48 {
+  gap: 48px;
+}
+
 .max {
+  width: 100%;
+  height: 100%;
+}
+
+.maxWidth {
   width: 100%;
 }
 
