--- a/client/src/shared/ui/Tabs/Tabs.module.scss
+++ b/client/src/shared/ui/Tabs/Tabs.module.scss
@@ -1,12 +1,15 @@
 .Tabs {
   position: relative;
+  width: 100%;
 
   .Tab {
     position: relative;
-    flex-grow: 1;
+    display: inline-flex;
+    flex: 1 1 0;
     min-width: max-content;
+    width: 100%;
+    height: 100%;
     text-align: center;
-    padding: 8px 16px;
     font-size: 16px;
     font-weight: 600;
     color: var(--dark-color-100);
@@ -14,10 +17,6 @@
     cursor: pointer;
 
     transition: all .2s linear;
-  
-    &:active {
-      background: rgba(115, 165, 255, .15);
-    }
   
     &:hover {
       background: rgba(35, 78, 153, .15);
@@ -34,6 +33,15 @@
   
     &.selected {
       color: var(--accent-color-500);
+
+      svg {
+        fill: var(--accent-color-500);
+
+        g, path {
+          fill: inherit;
+          transition: all .2s ease;
+        }
+      }
 
       &:disabled {
         color: var(--accent-color-500);
