--- a/client/src/shared/ui/Dropdown/Dropdown.module.scss
+++ b/client/src/shared/ui/Dropdown/Dropdown.module.scss
@@ -4,6 +4,11 @@
   color: var(--primary-text-color);
   background-color: var(--dark-color-700);
   border: none;
+  cursor: pointer;
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
 .DropdownContent {
@@ -16,24 +21,74 @@
   border-radius: 2px;
   overflow: hidden;
   z-index: 1100;
-  animation: fadeBottom .25s ease-in-out 1;
+  animation-duration: 400ms;
+  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  will-change: transform, opacity;
+}
+
+.DropdownContent[data-side='top'] {
+  animation-name: slideDownAndFade;
+}
+.DropdownContent[data-side='right'] {
+  animation-name: slideLeftAndFade;
+}
+.DropdownContent[data-side='bottom'] {
+  animation-name: slideUpAndFade;
+}
+.DropdownContent[data-side='left'] {
+  animation-name: slideRightAndFade;
 }
 
 .DropdownItem {
   width: 100%;
   padding: 6px 12px;
   cursor: pointer;
+
+  &:focus-visible {
+    outline: none;
+  }
 }
 
-@keyframes fadeBottom {
-  0% {
+@keyframes slideUpAndFade {
+  from {
     opacity: 0;
-    transform: translateY(-20px)
+    transform: translateY(20px);
   }
-  50% {
+  to {
+    opacity: 1;
     transform: translateY(0);
   }
-  100% {
+}
+
+@keyframes slideRightAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(-20px);
+  }
+  to {
     opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideDownAndFade {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes slideLeftAndFade {
+  from {
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
