--- a/client/src/shared/ui/Input/Input.module.scss
+++ b/client/src/shared/ui/Input/Input.module.scss
@@ -1,4 +1,5 @@
 .inputWrapper {
+  position: relative;
   color: var(--light-color-900);
   font-size: 14px;
   line-height: 24px;
@@ -32,7 +33,6 @@
     line-height: 24px;
 
     &:active {
-      //border-radius: 2px;
       border: 1px solid var(--light-color-500);
       background: var(--dark-color-500);
     }
@@ -42,23 +42,22 @@
     }
 
     &:focus {
-      //border-radius: 2px;
       border: 1px solid var(--accent-color-700);
     }
 
     &.errorInput {
-      //border-radius: 2px;
       border: 1px solid var(--danger-500, #cc1439) !important;
     }
   }
-}
 
-.errorBlock {
-  height: 25px;
+  .eye {
+    position: absolute;
+    right: 14px;
+    top: 35px;
+  }
 }
 
 .error {
-  position: absolute;
   font-size: 14px;
   color: var(--danger-color-500);
   font-weight: 400;
