--- a/client/src/shared/ui/MyImage/MyImage.module.scss
+++ b/client/src/shared/ui/MyImage/MyImage.module.scss
@@ -2,4 +2,37 @@
   position: relative;
   overflow: hidden;
   height: auto;
+
+  .NextImage {
+    position: absolute;
+    color: transparent;
+
+    &.original {
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
+    &.square {
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    &.wide {
+      inset: 21.875% 0 0 0;
+      width: 100%;
+      height:  56.25%;
+      object-fit: cover;
+    }
+
+    &.narrow {
+      inset: 0 0 0 10%;
+      width: 80%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 }
