add FilterImage feauture

--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -6,6 +6,7 @@
 @import 'swiper/scss';
 @import 'swiper/scss/navigation';
 @import 'swiper/scss/pagination';
+@import './swiper.scss';
 
 @media (min-width: 950px) {
   ::-webkit-scrollbar {
