--- a/client/src/features/createPost/ui/CreatePostHeader/CreatePostHeader.module.scss
+++ b/client/src/features/createPost/ui/CreatePostHeader/CreatePostHeader.module.scss
@@ -1,10 +1,14 @@
 .header {
+  position: relative;
   padding: 18px 0 18px 24px;
   background-color: var(--dark-color-300);
   border-bottom: 1px solid var(--dark-color-100);
 
   .title {
-    transform: translateX(12px);
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .icon {
