--- a/client/src/shared/ui/Modal/Modal.module.scss
+++ b/client/src/shared/ui/Modal/Modal.module.scss
@@ -45,6 +45,7 @@
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid var(--dark-color-100);
+  gap: 48px;
 
   @media (max-width: 769px) {
     padding: 12px 18px;
