--- a/client/src/shared/ui/Skeleton/Skeleton.module.scss
+++ b/client/src/shared/ui/Skeleton/Skeleton.module.scss
@@ -2,8 +2,8 @@
   width: 100%;
   height: 50px;
   position: relative;
-  box-shadow: 0 2px 10px 0 #151C1F;
-  background: #151C1F;
+  box-shadow: 0 2px 10px 0 #1b1b1b;
+  background: #2b2b2b;
   overflow: hidden;
 
   &::before {
@@ -14,17 +14,20 @@
     top: 0;
     height: 100%;
     width: 80%;
-    background: linear-gradient(to right, transparent 0%, #090F11 50%, transparent 100%);
-    animation: load 1s cubic-bezier(0.4, 0, 0.2, 1) infinite;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-name: placeHolderShimmer;
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    background-image: linear-gradient(to right, transparent 0%, #454545 50%, transparent 100%);
+    background-repeat: no-repeat;
   }
 }
 
-@keyframes load {
-  from {
-    left: -150px;
+@keyframes placeHolderShimmer {
+  0% {
+    left: -150%;
   }
-
-  to {
+  100% {
     left: 100%;
   }
 }
