add Captcha component;add forgot-password;add createNewPassword,fix input

--- a/client/src/shared/styles/variables/common/_form.scss
+++ b/client/src/shared/styles/variables/common/_form.scss
@@ -108,11 +108,11 @@
     }
   }
 
-  input[type='number']::-webkit-inner-adjust-hue-button,
-  input[type='number']::-webkit-outer-adjust-hue-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
+  //input[type='number']::-webkit-inner-adjust-hue-button,
+  //input[type='number']::-webkit-outer-adjust-hue-button {
+  //  -webkit-appearance: none;
+  //  margin: 0;
+  //}
 }
 
 .styled-checkbox {
