add ProfilePage, ProfileCard, PostList, PostDetailsWrapper, Page

--- a/client/src/shared/ui/Input/Input.module.scss
+++ b/client/src/shared/ui/Input/Input.module.scss
@@ -16,8 +16,15 @@
     }
   }
 
-  label {
-    display: block;
+  .label {
+    display: flex;
+    flex-direction: row;
+    gap: 4px;
+
+    .requiredStar {
+      color: red;
+      font-size: 14px;
+    }
   }
 
   .styledInput {
