--- a/client/src/shared/ui/Skeleton/Skeleton.module.scss
+++ b/client/src/shared/ui/Skeleton/Skeleton.module.scss
@@ -1,6 +1,6 @@
 .Skeleton {
   width: 100%;
-  height: 50px;
+  height: auto;
   position: relative;
   box-shadow: 0 2px 10px 0 #1b1b1b;
   background: #2b2b2b;
