--- a/client/src/widgets/PostList/ui/PostList/PostList.module.scss
+++ b/client/src/widgets/PostList/ui/PostList/PostList.module.scss
@@ -7,10 +7,29 @@
     }
   }
 
+  .skeleton {
+    flex-basis: 24.65%;
+    aspect-ratio: 1 / 1;
+  }
+
   &:has(.item:hover) {
     .item:not(:hover) {
       scale: .95;
       opacity: 1;
     }
+  }
+
+  @media (max-width: 769px) {
+    gap: 2px;
+
+    .skeleton {
+      flex-basis: 32.75%;
+    }
+  }
+}
+
+.Story {
+  .postList {
+    width: 768px;
   }
 }
