--- a/client/src/shared/ui/DottedMenuIcon/DottedMenuIcon.module.scss
+++ b/client/src/shared/ui/DottedMenuIcon/DottedMenuIcon.module.scss
@@ -5,7 +5,7 @@
   gap: 3px;
   width: 24px;
   height: 24px;
-  background-color: var(--dark-color-700);
+  //background-color: var(--dark-color-700);
   cursor: pointer;
 
   .dot {
@@ -13,7 +13,7 @@
     height: 4px;
     background-color: var(--light-color-100);
     border-radius: 50%;
-    transition: background-color .15s ease-in;
+    transition: background-color 0.15s ease-in;
   }
 
   &.active .dot {
