fix password indicator; add internet connection error to signIn/signup; add existed email error to signUp

--- a/client/src/features/auth/signIn/ui/signIn.module.scss
+++ b/client/src/features/auth/signIn/ui/signIn.module.scss
@@ -24,6 +24,16 @@
   margin-bottom: 12px;
 }
 
+.linkRegistration {
+  color: var(--accent-color-500);
+  text-decoration: none;
+  white-space: nowrap;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 .error {
   position: absolute;
   font-size: 14px;
