--- a/client/src/shared/ui/Checkbox/Checkbox.module.scss
+++ b/client/src/shared/ui/Checkbox/Checkbox.module.scss
@@ -1,26 +1,34 @@
-
 .customCheckbox {
   position: absolute;
   z-index: -1;
   opacity: 0;
+
+  &:checked + .checkboxLabel::before {
+    background-image: url('../../../shared/assets/icons/check.svg');
+  }
+
+  &:disabled + .checkboxLabel {
+    pointer-events: none
+  }
+
+  &:disabled + .checkboxLabel:before {
+    background-color: var(--dark-color-100);
+  }
 }
 
 .checkboxLabel {
   display: flex;
   margin: 0 5px 0 0;
   cursor: pointer;
+
+  &::before {
+    content: "";
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background-color: var(--light-color-100);
+    border-radius: 3px;
+  }
 }
 
-.checkboxLabel::before {
-  content: "";
-  display: inline-block;
-  width: 18px;
-  height: 18px;
-  background-color: var(--light-color-100);
-  border-radius: 3px;
 
-}
-
-.customCheckbox:checked + .checkboxLabel::before {
-  background-image: url('../../../shared/assets/icons/check.svg');
-}
