add All Payments page

--- a/client/src/shared/styles/variables/global.scss
+++ b/client/src/shared/styles/variables/global.scss
@@ -44,6 +44,7 @@
   --overlay-z-index: 100;
 
   // sizes
+  --app-container-width: 1360px;
   --header-height: 60px;
   --sidebar-width: 220px;
   --mobile-sidebar-height: 60px;
