--- a/client/src/shared/ui/Select/Select.module.scss
+++ b/client/src/shared/ui/Select/Select.module.scss
@@ -1,4 +1,5 @@
 .SelectTrigger {
+  position: relative;
   padding: 6px 12px;
   border: 1px solid var(--dark-color-100);
   border-radius: none;
@@ -27,6 +28,7 @@
 }
 
 .SelectContent {
+  position: relative;
   width: var(--radix-select-trigger-width);
   overflow: hidden;
   background-color: var(--dark-color-700);
