switch main app layout to dynamic server route

--- a/client/src/shared/styles/index.scss
+++ b/client/src/shared/styles/index.scss
@@ -1,6 +1,6 @@
 @import "variables/global";
+@import "variables/common";
 @import "reset";
-//@import "variables/common";
 
 // swiper/react
 @import 'swiper/scss';
