--- a/client/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
+++ b/client/src/entities/Comment/ui/CommentCard/CommentCard.module.scss
@@ -1,43 +1,24 @@
-.itemDescription {
-  display: flex;
-  align-items: flex-start;
-  font-size: 14px;
-  margin: 15px 0 5px 0;
-  color: var(--light-color-100)
-}
+.CommentCard {
+  .avatarWrapper {
+    margin-top: 4px;
+  }
 
-.imageAvatar {
-  margin: 6px 10px 0 0;
-  border-radius: 50%;
-}
+  .content {
+    font-size: 14px;
+    display: inline-block;
 
-.commentBlock {
-  max-width: 385px;
-  word-wrap: break-word;
-}
+    .username {
+      margin-right: 4px;
+      font-weight: 700;
+    }
+  }
 
-.itemName {
-  font-weight: 600;
-  margin-right: 4px;
-  line-height: 24px;
-  font-size: 14px;
-}
+  .infoBlock {
+    font-size: 12px;
+    color: var(--light-color-900);
 
-.itemText {
-  line-height: 24px;
-  font-size: 14px;
-}
-
-.itemTimestamp {
-  color: var(--light-color-900);
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-.itemDescriptionChildren {
-  margin-top: 16px;
-}
-
-.fullText{
-  width: 100%;
+    .answer {
+      cursor: pointer;
+    }
+  }
 }
