--- a/client/src/entities/Comment/ui/CommentList/CommentList.module.scss
+++ b/client/src/entities/Comment/ui/CommentList/CommentList.module.scss
@@ -1,6 +1,19 @@
-.publicationBlock {
-  width: 100%;
-  padding: 0 22px 0 22px;
-  max-height: 338px;
-  overflow: hidden;
+.CommentList {
+  padding: 12px 24px;
+  max-height: 302px;
+  overflow-y: scroll;
+
+  .labelNext {
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--light-color-900);
+    cursor: pointer;
+  }
+}
+
+.labelAll {
+  font-size: 14px;
+  font-weight: 700;
+  color: var(--light-color-900);
+  cursor: pointer;
 }
