--- a/client/src/shared/ui/DottedMenuIcon/DottedMenuIcon.module.scss
+++ b/client/src/shared/ui/DottedMenuIcon/DottedMenuIcon.module.scss
@@ -5,7 +5,7 @@
   gap: 3px;
   width: 24px;
   height: 24px;
-  //background-color: var(--dark-color-700);
+  background-color: var(--dark-color-700);
   cursor: pointer;
 
   .dot {
