add HomePage; linting

--- a/client/src/features/addCommentForm/ui/addCommentForm.module.scss
+++ b/client/src/features/addCommentForm/ui/addCommentForm.module.scss
@@ -5,10 +5,10 @@
 
 .addInput {
   outline: 0;
-  padding: 22px;
+  padding: 18px 0;
   width: 100%;
   border: none;
-  background: var(--dark-color-300);
+  background: transparent;
   color: white;
   font-size: 14px;
 
