--- a/client/src/widgets/PostDetails/ui/PostDetails/PostDetails.module.scss
+++ b/client/src/widgets/PostDetails/ui/PostDetails/PostDetails.module.scss
@@ -1,101 +1,6 @@
-.modal {
-  @media (max-width: 768px) {
-    display: none;
+.PostDetails {
+  &.card {
+    max-width: 490px;
+    width: 100%;
   }
 }
-
-.mainBlock {
-  max-width: 980px;
-  width: 100%;
-}
-
-.rightBlock {
-  max-width: 490px;
-  width: 100%;
-}
-
-.buttonClose {
-  all: unset;
-  cursor: pointer;
-  position: absolute;
-  top: -35px;
-  right: -30px;
-}
-
-.descriptionContainer{
-  width: 100%;
-  border-left: 1px solid #f5a7a7;
-}
-
-.publicationFooter {
-  border-top: 1px solid #4c4c4c;
-  width: 100%;
-  padding: 10px 22px 5px 22px;
-  border-bottom: 1px solid #4c4c4c;
-}
-
-.iconBlockContainer {
-  button {
-    all: unset;
-  }
-  display: flex;
-  justify-content: space-between;
-}
-
-.likeBlockContainer {
-  display: flex;
-  align-items: center;
-  margin: 16px 0 0 0;
-}
-
-.likes {
-  font-size: 14px;
-}
-
-.date {
-  color: #8D9094;
-  font-size: 12px;
-}
-
-.imageAvatar {
-  margin: 6px 10px 0 0;
-  border-radius: 50%;
-}
-
-.storybook {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.mainSkeleton {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: var(--modal-z-index);
-
-  .container {
-    width: 980px;
-    background-color: var(--dark-color-300);
-    border: 1px solid var(--dark-color-100);
-    z-index: var(--modal-z-index);
-
-    .header {
-      border-bottom: 1px solid var(--dark-color-100);
-      padding-bottom: 12px;
-    }
-  
-    .padding {
-      padding: 12px;
-    }
-  
-    .content > .padding {
-      border-right: 1px solid var(--dark-color-100);
-    }
-  }
-}
-
-
