--- a/client/src/entities/Comment/ui/CommentList/CommentList.module.scss
+++ b/client/src/entities/Comment/ui/CommentList/CommentList.module.scss
@@ -1,7 +1,12 @@
 .CommentList {
-  padding: 12px 24px;
-  max-height: 302px;
+  padding: 12px 0;
+  // height: 100%;
   overflow-y: scroll;
+
+  &.all {
+    padding: 12px 0;
+    max-height: 500px;
+  }
 
   .labelNext {
     font-size: 14px;
