--- a/client/src/widgets/PostDetails/ui/PostHeader/PostHeader.module.scss
+++ b/client/src/widgets/PostDetails/ui/PostHeader/PostHeader.module.scss
@@ -1,26 +1,19 @@
-.headerBlock {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  align-items: center;
-  border-bottom: 1px solid #4C4C4C;
-  padding: 12px 24px;
+.header {
+  height: auto;
 
-  .name {
-    font-size: 15px;
+  &.modal {
+    padding: 12px 24px;
   }
-}
 
-.userName {
-  font-weight: 600;
-}
-
-.noBorder {
-  border: none;
-}
-
-.imageAvatar {
-    margin: 6px 10px 0 0;
+  .dot {
+    width: 4px;
+    height: 4px;
     border-radius: 50%;
+    background-color: var(--light-color-700);
+  }
+
+  .date {
+    font-size: 12px;
+    color: var(--light-color-900);
+  }
 }
