--- a/client/src/widgets/PostDetails/ui/PublicationDescription/PublicationDescription.module.scss
+++ b/client/src/widgets/PostDetails/ui/PublicationDescription/PublicationDescription.module.scss
@@ -1,7 +1,36 @@
-.featuresWithInfoBlock {
-  padding: 12px 24px;
-  background-color: var(--dark-color-300);
-  border-bottom: 1px solid var(--dark-color-100);
-  border-top: 1px solid var(--dark-color-100);
-  z-index: 10;
+.PublicationDescription {
+  &.modal.additionalPadding {
+    padding-bottom: 14px;
+
+    .info {
+      border-bottom: none;
+    }
+  }
+
+  &.modal {
+    display: grid;
+    height: calc(100% - 60px);
+    border-top: 1px solid var(--dark-color-100);
+
+    .commentList {
+      padding: 12px 24px;
+      order: -1;
+      align-self: stretch;
+      border-bottom: 1px solid var(--dark-color-100);
+    }
+
+    .features {
+      padding: 12px 24px;
+    }
+
+    .info {
+      padding: 12px 24px;
+      border-bottom: 1px solid var(--dark-color-100);
+    }
+
+    .addComment {
+      padding-left: 24px;
+    }
+  }
 }
+
